# python-project-lvl4

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/workflows/: tests_and_linter.yml
fixtures/: labels.json  statuses.json  task_label_rel.json  tasks.json  users.json
locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: update_label.html
task_manager/labels/templates/labels/: create.html  delete.html  list.html
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: update_status.html
task_manager/statuses/templates/statuses/: create.html  delete.html  list.html
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0002_initial.py  0003_alter_task_executor.py
task_manager/tasks/templates/: create_task.html  delete_task.html  task_details.html  tasks.html
task_manager/tasks/templates/tasks/: details.html  list.html  update.html
task_manager/templates/: base.html  index.html  login.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/: create_user.html  update_user.html
(+2 files in other folders)
