[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Sergey Martynov <acemore@mail.ru>"]
repository = "https://github.com/Acemore/python-project-lvl4"
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
Django = "4.0.4"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"
django-bootstrap4 = "^22.1"
psycopg2-binary = "^2.9.5"
django-filter = "^21.1"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
